y.output
Terminais não utilizados na gramática

   CHAR
   OP_PTR
   SIZEOF
   TYPEOF


Estado 119 conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: translation_unit $end

    1 translation_unit: program_file

    2 program_file: declarations

    3 declarations: declaration
    4             | declarations declaration

    5 declaration: function_declaration
    6            | procedure_declaration
    7            | type_declaration
    8            | variable_declaration

    9 function_declaration: FUNCTION type_specifier subprogram_declarator subprogram_body END_FUNCTION

   10 procedure_declaration: PROCEDURE subprogram_declarator subprogram_body END_PROCEDURE

   11 subprogram_declarator: IDENTIFIER L_PAREN parameter_list R_PAREN
   12                      | IDENTIFIER L_PAREN R_PAREN

   13 parameter_list: parameter
   14               | parameter_list COMMA parameter

   15 parameter: type_specifier declarator_name
   16          | CONST type_specifier declarator_name

   17 subprogram_body: block
   18                | SEMICOLON

   19 block: local_variable_declarations_and_statements

   20 local_variable_declarations_and_statements: local_variable_declarations_or_statements
   21                                           | local_variable_declarations_and_statements local_variable_declarations_or_statements

   22 local_variable_declarations_or_statements: local_variable_declaration_statement
   23                                          | statement

   24 local_variable_declaration_statement: type_specifier variable_declarators SEMICOLON
   25                                     | STATIC type_specifier variable_declarators SEMICOLON

   26 statement: assignment_expression SEMICOLON
   27          | selection_statement
   28          | iteration_statement
   29          | jump_statement
   30          | read_statement
   31          | print_statement
   32          | println_statement

   33 selection_statement: IF L_PAREN expression R_PAREN block ELSIF elsif_staments END_IF
   34                    | IF L_PAREN expression R_PAREN block ELSE block END_IF
   35                    | IF L_PAREN expression R_PAREN block END_IF

   36 elsif_staments: elsif_stament
   37               | elsif_staments ELSIF elsif_stament
   38               | ELSE block

   39 elsif_stament: L_PAREN expression R_PAREN block

   40 iteration_statement: WHILE L_PAREN expression R_PAREN block END_WHILE
   41                    | FOR L_PAREN for_init for_expr for_incr R_PAREN block END_FOR
   42                    | FOR L_PAREN for_init for_expr R_PAREN block END_FOR

   43 for_init: expression_statements SEMICOLON
   44         | local_variable_declaration_statement
   45         | SEMICOLON

   46 for_expr: expression SEMICOLON
   47         | SEMICOLON

   48 for_incr: expression_statements

   49 expression_statements: expression_statement
   50                      | expression_statements COMMA expression_statement

   51 expression_statement: expression

   52 jump_statement: BREAK IDENTIFIER SEMICOLON
   53               | BREAK SEMICOLON
   54               | CONTINUE IDENTIFIER SEMICOLON
   55               | CONTINUE SEMICOLON
   56               | RETURN expression SEMICOLON
   57               | RETURN SEMICOLON

   58 read_statement: READ L_PAREN STRING_LITERAL COMMA argument_list R_PAREN SEMICOLON
   59               | READ L_PAREN STRING_LITERAL R_PAREN SEMICOLON

   60 print_statement: PRINT L_PAREN expression R_PAREN SEMICOLON

   61 println_statement: PRINTLN L_PAREN expression R_PAREN SEMICOLON

   62 type_declaration: STRUCT IDENTIFIER variable_declarations END_STRUCT
   63                 | UNION IDENTIFIER discriminant union_body END_UNION
   64                 | ENUM IDENTIFIER enumerator_list END_ENUM

   65 variable_declarations: variable_declaration
   66                      | variable_declarations variable_declaration

   67 variable_declaration: modifiers type_specifier variable_declarators SEMICOLON
   68                     | type_specifier variable_declarators SEMICOLON

   69 modifiers: modifier
   70          | modifiers modifier

   71 modifier: CONST
   72         | STATIC

   73 type_specifier: type_name

   74 type_name: primitive_type
   75          | qualified_name

   76 primitive_type: AUTO
   77               | BOOL
   78               | INT
   79               | LONG
   80               | FLOAT
   81               | STRING

   82 discriminant: L_PAREN type_specifier declarator_name R_PAREN
   83             | %empty

   84 enumerator_list: enumerator
   85                | enumerator_list COMMA enumerator

   86 enumerator: IDENTIFIER ASSIGN expression
   87           | IDENTIFIER

   88 qualified_name: IDENTIFIER

   89 union_body: variable_declarations short_case_statement
   90           | variable_declarations

   91 short_case_statement: CASE IDENTIFIER choices END_CASE

   92 choices: choice
   93        | choices choice

   94 choice: WHEN IDENTIFIER THEN variable_declarations

   95 variable_declarators: variable_declarator
   96                     | variable_declarators COMMA variable_declarator

   97 variable_declarator: declarator_name
   98                    | declarator_name ASSIGN variable_initializer

   99 declarator_name: IDENTIFIER
  100                | declarator_name dim_exprs

  101 variable_initializer: expression
  102                     | L_BRACE R_BRACE
  103                     | L_BRACE array_initializers R_BRACE

  104 array_initializers: variable_initializer
  105                   | array_initializers COMMA variable_initializer
  106                   | array_initializers COMMA

  107 expression: assignment_expression

  108 assignment_expression: conditional_or_expression
  109                      | unary_expression assignment_operator assignment_expression

  110 unary_expression: arithmetic_unary_operator cast_expression
  111                 | logical_unary_expression

  112 logical_unary_expression: postfix_expression
  113                         | logical_unary_operator unary_expression

  114 postfix_expression: primary_expression

  115 primary_expression: qualified_name
  116                   | not_just_name

  117 arithmetic_unary_operator: OP_PLUS
  118                          | OP_MINUS

  119 logical_unary_operator: BITWISE_COMPLEMENT
  120                       | LOG_NOT

  121 conditional_or_expression: conditional_and_expression
  122                          | conditional_or_expression LOG_OR conditional_and_expression
  123                          | conditional_or_expression LOG_SC_OR conditional_and_expression

  124 conditional_and_expression: inclusive_or_expression
  125                           | conditional_and_expression LOG_AND inclusive_or_expression
  126                           | conditional_and_expression LOG_SC_AND inclusive_or_expression

  127 inclusive_or_expression: exclusive_or_expression
  128                        | inclusive_or_expression BITWISE_OR exclusive_or_expression

  129 exclusive_or_expression: and_expression
  130                        | exclusive_or_expression BITWISE_OR_EXC and_expression

  131 and_expression: equality_expression
  132               | and_expression AMPERSAND equality_expression

  133 equality_expression: relational_expression
  134                    | equality_expression OP_EQ relational_expression
  135                    | equality_expression OP_NE relational_expression

  136 relational_expression: shift_expression
  137                      | relational_expression OP_LT shift_expression
  138                      | relational_expression OP_GT shift_expression
  139                      | relational_expression OP_LET shift_expression
  140                      | relational_expression OP_GET shift_expression

  141 shift_expression: additive_expression
  142                 | shift_expression L_SHIFT additive_expression
  143                 | shift_expression R_SHIFT additive_expression

  144 additive_expression: multiplicative_expression
  145                    | additive_expression OP_PLUS multiplicative_expression
  146                    | additive_expression OP_MINUS multiplicative_expression

  147 multiplicative_expression: cast_expression
  148                          | multiplicative_expression OP_ASTERISK cast_expression
  149                          | multiplicative_expression OP_DIV cast_expression
  150                          | multiplicative_expression OP_MOD cast_expression

  151 cast_expression: unary_expression
  152                | L_PAREN primitive_type_expression R_PAREN cast_expression
  153                | L_PAREN user_type_expression R_PAREN cast_expression
  154                | L_PAREN expression R_PAREN logical_unary_expression

  155 primitive_type_expression: primitive_type
  156                          | primitive_type dims

  157 user_type_expression: qualified_name dims

  158 assignment_operator: ASSIGN
  159                    | ASSIGN_PLUS
  160                    | ASSIGN_MINUS
  161                    | ASSIGN_PRODUCT
  162                    | ASSIGN_DIV
  163                    | ASSIGN_MOD
  164                    | ASSIGN_BITWISE_AND
  165                    | ASSIGN_BITWISE_OR
  166                    | ASSIGN_BITWISE_OR_EXC
  167                    | ASSIGN_L_SHIFT
  168                    | ASSIGN_R_SHIFT

  169 not_just_name: complex_primary

  170 complex_primary: L_PAREN expression R_PAREN
  171                | complex_primary_no_parenthesis

  172 complex_primary_no_parenthesis: BOOL_LITERAL
  173                               | OCTAL
  174                               | DECIMAL
  175                               | HEX
  176                               | FLOATING_POINT
  177                               | NNULL
  178                               | STRING_LITERAL
  179                               | array_access
  180                               | field_access
  181                               | subprogram_call

  182 array_access: qualified_name L_SQ_PAREN expression R_SQ_PAREN
  183             | complex_primary L_SQ_PAREN expression R_SQ_PAREN

  184 field_access: postfix_expression DOT IDENTIFIER

  185 subprogram_call: subprogram_access L_PAREN argument_list R_PAREN
  186                | subprogram_access L_PAREN R_PAREN

  187 subprogram_access: complex_primary_no_parenthesis
  188                  | qualified_name

  189 argument_list: expression
  190              | argument_list COMMA expression

  191 dim_exprs: dim_expr
  192          | dim_exprs dim_expr

  193 dim_expr: L_SQ_PAREN expression R_SQ_PAREN

  194 dims: L_SQ_PAREN R_SQ_PAREN
  195     | dims L_SQ_PAREN R_SQ_PAREN


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
IDENTIFIER (258) 11 12 52 54 62 63 64 86 87 88 91 94 99 184
ASSIGN (259) 86 98 158
ASSIGN_PLUS (260) 159
ASSIGN_MINUS (261) 160
ASSIGN_PRODUCT (262) 161
ASSIGN_DIV (263) 162
ASSIGN_MOD (264) 163
ASSIGN_BITWISE_AND (265) 164
ASSIGN_BITWISE_OR (266) 165
ASSIGN_BITWISE_OR_EXC (267) 166
ASSIGN_L_SHIFT (268) 167
ASSIGN_R_SHIFT (269) 168
AMPERSAND (270) 132
AUTO (271) 76
BOOL (272) 77
BREAK (273) 52 53
BITWISE_COMPLEMENT (274) 119
BITWISE_OR (275) 128
BITWISE_OR_EXC (276) 130
DOT (277) 184
CHAR (278)
COMMA (279) 14 50 58 85 96 105 106 190
CONTINUE (280) 54 55
CONST (281) 16 71
ENUM (282) 64
ELSE (283) 34 38
ELSIF (284) 33 37
FLOAT (285) 80
FOR (286) 41 42
IF (287) 33 34 35
INT (288) 78
L_PAREN (289) 11 12 33 34 35 39 40 41 42 58 59 60 61 82 152 153 154
    170 185 186
L_SQ_PAREN (290) 182 183 193 194 195
L_BRACE (291) 102 103
L_SHIFT (292) 142
LOG_NOT (293) 120
LOG_AND (294) 125
LOG_OR (295) 122
LOG_SC_AND (296) 126
LOG_SC_OR (297) 123
LONG (298) 79
OP_EQ (299) 134
OP_NE (300) 135
OP_PTR (301)
OP_PLUS (302) 117 145
OP_MINUS (303) 118 146
OP_ASTERISK (304) 148
OP_DIV (305) 149
OP_MOD (306) 150
OP_LET (307) 139
OP_LT (308) 137
OP_GET (309) 140
OP_GT (310) 138
PRINT (311) 60
PRINTLN (312) 61
R_PAREN (313) 11 12 33 34 35 39 40 41 42 58 59 60 61 82 152 153 154
    170 185 186
R_SQ_PAREN (314) 182 183 193 194 195
R_BRACE (315) 102 103
R_SHIFT (316) 143
STRING (317) 81
STRUCT (318) 62
STATIC (319) 25 72
SIZEOF (320)
READ (321) 58 59
RETURN (322) 56 57
SEMICOLON (323) 18 24 25 26 43 45 46 47 52 53 54 55 56 57 58 59 60
    61 67 68
UNION (324) 63
WHILE (325) 40
CASE (326) 91
END_CASE (327) 91
END_ENUM (328) 64
END_FOR (329) 41 42
END_FUNCTION (330) 9
END_IF (331) 33 34 35
END_PROCEDURE (332) 10
END_STRUCT (333) 62
END_UNION (334) 63
END_WHILE (335) 40
FUNCTION (336) 9
PROCEDURE (337) 10
THEN (338) 94
TYPEOF (339)
WHEN (340) 94
STRING_LITERAL (341) 58 59 178
DECIMAL (342) 174
HEX (343) 175
OCTAL (344) 173
FLOATING_POINT (345) 176
BOOL_LITERAL (346) 172
NNULL (347) 177


Não-terminais com as regras onde eles aparecem

$accept (93)
    à esquerda: 0
translation_unit (94)
    à esquerda: 1, à direita: 0
program_file (95)
    à esquerda: 2, à direita: 1
declarations (96)
    à esquerda: 3 4, à direita: 2 4
declaration (97)
    à esquerda: 5 6 7 8, à direita: 3 4
function_declaration (98)
    à esquerda: 9, à direita: 5
procedure_declaration (99)
    à esquerda: 10, à direita: 6
subprogram_declarator (100)
    à esquerda: 11 12, à direita: 9 10
parameter_list (101)
    à esquerda: 13 14, à direita: 11 14
parameter (102)
    à esquerda: 15 16, à direita: 13 14
subprogram_body (103)
    à esquerda: 17 18, à direita: 9 10
block (104)
    à esquerda: 19, à direita: 17 33 34 35 38 39 40 41 42
local_variable_declarations_and_statements (105)
    à esquerda: 20 21, à direita: 19 21
local_variable_declarations_or_statements (106)
    à esquerda: 22 23, à direita: 20 21
local_variable_declaration_statement (107)
    à esquerda: 24 25, à direita: 22 44
statement (108)
    à esquerda: 26 27 28 29 30 31 32, à direita: 23
selection_statement (109)
    à esquerda: 33 34 35, à direita: 27
elsif_staments (110)
    à esquerda: 36 37 38, à direita: 33 37
elsif_stament (111)
    à esquerda: 39, à direita: 36 37
iteration_statement (112)
    à esquerda: 40 41 42, à direita: 28
for_init (113)
    à esquerda: 43 44 45, à direita: 41 42
for_expr (114)
    à esquerda: 46 47, à direita: 41 42
for_incr (115)
    à esquerda: 48, à direita: 41
expression_statements (116)
    à esquerda: 49 50, à direita: 43 48 50
expression_statement (117)
    à esquerda: 51, à direita: 49 50
jump_statement (118)
    à esquerda: 52 53 54 55 56 57, à direita: 29
read_statement (119)
    à esquerda: 58 59, à direita: 30
print_statement (120)
    à esquerda: 60, à direita: 31
println_statement (121)
    à esquerda: 61, à direita: 32
type_declaration (122)
    à esquerda: 62 63 64, à direita: 7
variable_declarations (123)
    à esquerda: 65 66, à direita: 62 66 89 90 94
variable_declaration (124)
    à esquerda: 67 68, à direita: 8 65 66
modifiers (125)
    à esquerda: 69 70, à direita: 67 70
modifier (126)
    à esquerda: 71 72, à direita: 69 70
type_specifier (127)
    à esquerda: 73, à direita: 9 15 16 24 25 67 68 82
type_name (128)
    à esquerda: 74 75, à direita: 73
primitive_type (129)
    à esquerda: 76 77 78 79 80 81, à direita: 74 155 156
discriminant (130)
    à esquerda: 82 83, à direita: 63
enumerator_list (131)
    à esquerda: 84 85, à direita: 64 85
enumerator (132)
    à esquerda: 86 87, à direita: 84 85
qualified_name (133)
    à esquerda: 88, à direita: 75 115 157 182 188
union_body (134)
    à esquerda: 89 90, à direita: 63
short_case_statement (135)
    à esquerda: 91, à direita: 89
choices (136)
    à esquerda: 92 93, à direita: 91 93
choice (137)
    à esquerda: 94, à direita: 92 93
variable_declarators (138)
    à esquerda: 95 96, à direita: 24 25 67 68 96
variable_declarator (139)
    à esquerda: 97 98, à direita: 95 96
declarator_name (140)
    à esquerda: 99 100, à direita: 15 16 82 97 98 100
variable_initializer (141)
    à esquerda: 101 102 103, à direita: 98 104 105
array_initializers (142)
    à esquerda: 104 105 106, à direita: 103 105 106
expression (143)
    à esquerda: 107, à direita: 33 34 35 39 40 46 51 56 60 61 86
    101 154 170 182 183 189 190 193
assignment_expression (144)
    à esquerda: 108 109, à direita: 26 107 109
unary_expression (145)
    à esquerda: 110 111, à direita: 109 113 151
logical_unary_expression (146)
    à esquerda: 112 113, à direita: 111 154
postfix_expression (147)
    à esquerda: 114, à direita: 112 184
primary_expression (148)
    à esquerda: 115 116, à direita: 114
arithmetic_unary_operator (149)
    à esquerda: 117 118, à direita: 110
logical_unary_operator (150)
    à esquerda: 119 120, à direita: 113
conditional_or_expression (151)
    à esquerda: 121 122 123, à direita: 108 122 123
conditional_and_expression (152)
    à esquerda: 124 125 126, à direita: 121 122 123 125 126
inclusive_or_expression (153)
    à esquerda: 127 128, à direita: 124 125 126 128
exclusive_or_expression (154)
    à esquerda: 129 130, à direita: 127 128 130
and_expression (155)
    à esquerda: 131 132, à direita: 129 130 132
equality_expression (156)
    à esquerda: 133 134 135, à direita: 131 132 134 135
relational_expression (157)
    à esquerda: 136 137 138 139 140, à direita: 133 134 135 137 138
    139 140
shift_expression (158)
    à esquerda: 141 142 143, à direita: 136 137 138 139 140 142 143
additive_expression (159)
    à esquerda: 144 145 146, à direita: 141 142 143 145 146
multiplicative_expression (160)
    à esquerda: 147 148 149 150, à direita: 144 145 146 148 149 150
cast_expression (161)
    à esquerda: 151 152 153 154, à direita: 110 147 148 149 150 152
    153
primitive_type_expression (162)
    à esquerda: 155 156, à direita: 152
user_type_expression (163)
    à esquerda: 157, à direita: 153
assignment_operator (164)
    à esquerda: 158 159 160 161 162 163 164 165 166 167 168, à direita:
    109
not_just_name (165)
    à esquerda: 169, à direita: 116
complex_primary (166)
    à esquerda: 170 171, à direita: 169 183
complex_primary_no_parenthesis (167)
    à esquerda: 172 173 174 175 176 177 178 179 180 181, à direita:
    171 187
array_access (168)
    à esquerda: 182 183, à direita: 179
field_access (169)
    à esquerda: 184, à direita: 180
subprogram_call (170)
    à esquerda: 185 186, à direita: 181
subprogram_access (171)
    à esquerda: 187 188, à direita: 185 186
argument_list (172)
    à esquerda: 189 190, à direita: 58 185 190
dim_exprs (173)
    à esquerda: 191 192, à direita: 100 192
dim_expr (174)
    à esquerda: 193, à direita: 191 192
dims (175)
    à esquerda: 194 195, à direita: 156 157 195


State 0

    0 $accept: . translation_unit $end
    1 translation_unit: . program_file
    2 program_file: . declarations
    3 declarations: . declaration
    4             | . declarations declaration
    5 declaration: . function_declaration
    6            | . procedure_declaration
    7            | . type_declaration
    8            | . variable_declaration
    9 function_declaration: . FUNCTION type_specifier subprogram_declarator subprogram_body END_FUNCTION
   10 procedure_declaration: . PROCEDURE subprogram_declarator subprogram_body END_PROCEDURE
   62 type_declaration: . STRUCT IDENTIFIER variable_declarations END_STRUCT
   63                 | . UNION IDENTIFIER discriminant union_body END_UNION
   64                 | . ENUM IDENTIFIER enumerator_list END_ENUM
   67 variable_declaration: . modifiers type_specifier variable_declarators SEMICOLON
   68                     | . type_specifier variable_declarators SEMICOLON
   69 modifiers: . modifier
   70          | . modifiers modifier
   71 modifier: . CONST
   72         | . STATIC
   73 type_specifier: . type_name
   74 type_name: . primitive_type
   75          | . qualified_name
   76 primitive_type: . AUTO
   77               | . BOOL
   78               | . INT
   79               | . LONG
   80               | . FLOAT
   81               | . STRING
   88 qualified_name: . IDENTIFIER

    IDENTIFIER  deslocar, e ir ao estado 1
    AUTO        deslocar, e ir ao estado 2
    BOOL        deslocar, e ir ao estado 3
    CONST       deslocar, e ir ao estado 4
    ENUM        deslocar, e ir ao estado 5
    FLOAT       deslocar, e ir ao estado 6
    INT         deslocar, e ir ao estado 7
    LONG        deslocar, e ir ao estado 8
    STRING      deslocar, e ir ao estado 9
    STRUCT      deslocar, e ir ao estado 10
    STATIC      deslocar, e ir ao estado 11
    UNION       deslocar, e ir ao estado 12
    FUNCTION    deslocar, e ir ao estado 13
    PROCEDURE   deslocar, e ir ao estado 14

    translation_unit       ir ao estado 15
    program_file           ir ao estado 16
    declarations           ir ao estado 17
    declaration            ir ao estado 18
    function_declaration   ir ao estado 19
    procedure_declaration  ir ao estado 20
    type_declaration       ir ao estado 21
    variable_declaration   ir ao estado 22
    modifiers              ir ao estado 23
    modifier               ir ao estado 24
    type_specifier         ir ao estado 25
    type_name              ir ao estado 26
    primitive_type         ir ao estado 27
    qualified_name         ir ao estado 28


State 1

   88 qualified_name: IDENTIFIER .

    $padrão  reduzir usando a regra 88 (qualified_name)


State 2

   76 primitive_type: AUTO .

    $padrão  reduzir usando a regra 76 (primitive_type)


State 3

   77 primitive_type: BOOL .

    $padrão  reduzir usando a regra 77 (primitive_type)


State 4

   71 modifier: CONST .

    $padrão  reduzir usando a regra 71 (modifier)


State 5

   64 type_declaration: ENUM . IDENTIFIER enumerator_list END_ENUM

    IDENTIFIER  deslocar, e ir ao estado 29


State 6

   80 primitive_type: FLOAT .

    $padrão  reduzir usando a regra 80 (primitive_type)


State 7

   78 primitive_type: INT .

    $padrão  reduzir usando a regra 78 (primitive_type)


State 8

   79 primitive_type: LONG .

    $padrão  reduzir usando a regra 79 (primitive_type)


State 9

   81 primitive_type: STRING .

    $padrão  reduzir usando a regra 81 (primitive_type)


State 10

   62 type_declaration: STRUCT . IDENTIFIER variable_declarations END_STRUCT

    IDENTIFIER  deslocar, e ir ao estado 30


State 11

   72 modifier: STATIC .

    $padrão  reduzir usando a regra 72 (modifier)


State 12

   63 type_declaration: UNION . IDENTIFIER discriminant union_body END_UNION

    IDENTIFIER  deslocar, e ir ao estado 31


State 13

    9 function_declaration: FUNCTION . type_specifier subprogram_declarator subprogram_body END_FUNCTION
   73 type_specifier: . type_name
   74 type_name: . primitive_type
   75          | . qualified_name
   76 primitive_type: . AUTO
   77               | . BOOL
   78               | . INT
   79               | . LONG
   80               | . FLOAT
   81               | . STRING
   88 qualified_name: . IDENTIFIER

    IDENTIFIER  deslocar, e ir ao estado 1
    AUTO        deslocar, e ir ao estado 2
    BOOL        deslocar, e ir ao estado 3
    FLOAT       deslocar, e ir ao estado 6
    INT         deslocar, e ir ao estado 7
    LONG        deslocar, e ir ao estado 8
    STRING      deslocar, e ir ao estado 9

    type_specifier  ir ao estado 32
    type_name       ir ao estado 26
    primitive_type  ir ao estado 27
    qualified_name  ir ao estado 28


State 14

   10 procedure_declaration: PROCEDURE . subprogram_declarator subprogram_body END_PROCEDURE
   11 subprogram_declarator: . IDENTIFIER L_PAREN parameter_list R_PAREN
   12                      | . IDENTIFIER L_PAREN R_PAREN

    IDENTIFIER  deslocar, e ir ao estado 33

    subprogram_declarator  ir ao estado 34


State 15

    0 $accept: translation_unit . $end

    $end  deslocar, e ir ao estado 35


State 16

    1 translation_unit: program_file .

    $padrão  reduzir usando a regra 1 (translation_unit)


State 17

    2 program_file: declarations .  [$end]
    4 declarations: declarations . declaration
    5 declaration: . function_declaration
    6            | . procedure_declaration
    7            | . type_declaration
    8            | . variable_declaration
    9 function_declaration: . FUNCTION type_specifier subprogram_declarator subprogram_body END_FUNCTION
   10 procedure_declaration: . PROCEDURE subprogram_declarator subprogram_body END_PROCEDURE
   62 type_declaration: . STRUCT IDENTIFIER variable_declarations END_STRUCT
   63                 | . UNION IDENTIFIER discriminant union_body END_UNION
   64                 | . ENUM IDENTIFIER enumerator_list END_ENUM
   67 variable_declaration: . modifiers type_specifier variable_declarators SEMICOLON
   68                     | . type_specifier variable_declarators SEMICOLON
   69 modifiers: . modifier
   70          | . modifiers modifier
   71 modifier: . CONST
   72         | . STATIC
   73 type_specifier: . type_name
   74 type_name: . primitive_type
   75          | . qualified_name
   76 primitive_type: . AUTO
   77               | . BOOL
   78               | . INT
   79               | . LONG
   80               | . FLOAT
   81               | . STRING
   88 qualified_name: . IDENTIFIER

    IDENTIFIER  deslocar, e ir ao estado 1
    AUTO        deslocar, e ir ao estado 2
    BOOL        deslocar, e ir ao estado 3
    CONST       deslocar, e ir ao estado 4
    ENUM        deslocar, e ir ao estado 5
    FLOAT       deslocar, e ir ao estado 6
    INT         deslocar, e ir ao estado 7
    LONG        deslocar, e ir ao estado 8
    STRING      deslocar, e ir ao estado 9
    STRUCT      deslocar, e ir ao estado 10
    STATIC      deslocar, e ir ao estado 11
    UNION       deslocar, e ir ao estado 12
    FUNCTION    deslocar, e ir ao estado 13
    PROCEDURE   deslocar, e ir ao estado 14

    $padrão  reduzir usando a regra 2 (program_file)

    declaration            ir ao estado 36
    function_declaration   ir ao estado 19
    procedure_declaration  ir ao estado 20
    type_declaration       ir ao estado 21
    variable_declaration   ir ao estado 22
    modifiers              ir ao estado 23
    modifier               ir ao estado 24
    type_specifier         ir ao estado 25
    type_name              ir ao estado 26
    primitive_type         ir ao estado 27
    qualified_name         ir ao estado 28


State 18

    3 declarations: declaration .

    $padrão  reduzir usando a regra 3 (declarations)


State 19

    5 declaration: function_declaration .

    $padrão  reduzir usando a regra 5 (declaration)


State 20

    6 declaration: procedure_declaration .

    $padrão  reduzir usando a regra 6 (declaration)


State 21

    7 declaration: type_declaration .

    $padrão  reduzir usando a regra 7 (declaration)


State 22

    8 declaration: variable_declaration .

    $padrão  reduzir usando a regra 8 (declaration)


State 23

   67 variable_declaration: modifiers . type_specifier variable_declarators SEMICOLON
   70 modifiers: modifiers . modifier
   71 modifier: . CONST
   72         | . STATIC
   73 type_specifier: . type_name
   74 type_name: . primitive_type
   75          | . qualified_name
   76 primitive_type: . AUTO
   77               | . BOOL
   78               | . INT
   79               | . LONG
   80               | . FLOAT
   81               | . STRING
   88 qualified_name: . IDENTIFIER

    IDENTIFIER  deslocar, e ir ao estado 1
    AUTO        deslocar, e ir ao estado 2
    BOOL        deslocar, e ir ao estado 3
    CONST       deslocar, e ir ao estado 4
    FLOAT       deslocar, e ir ao estado 6
    INT         deslocar, e ir ao estado 7
    LONG        deslocar, e ir ao estado 8
    STRING      deslocar, e ir ao estado 9
    STATIC      deslocar, e ir ao estado 11

    modifier        ir ao estado 37
    type_specifier  ir ao estado 38
    type_name       ir ao estado 26
    primitive_type  ir ao estado 27
    qualified_name  ir ao estado 28


State 24

   69 modifiers: modifier .

    $padrão  reduzir usando a regra 69 (modifiers)


State 25

   68 variable_declaration: type_specifier . variable_declarators SEMICOLON
   95 variable_declarators: . variable_declarator
   96                     | . variable_declarators COMMA variable_declarator
   97 variable_declarator: . declarator_name
   98                    | . declarator_name ASSIGN variable_initializer
   99 declarator_name: . IDENTIFIER
  100                | . declarator_name dim_exprs

    IDENTIFIER  deslocar, e ir ao estado 39

    variable_declarators  ir ao estado 40
    variable_declarator   ir ao estado 41
    declarator_name       ir ao estado 42


State 26

   73 type_specifier: type_name .

    $padrão  reduzir usando a regra 73 (type_specifier)


State 27

   74 type_name: primitive_type .

    $padrão  reduzir usando a regra 74 (type_name)


State 28

   75 type_name: qualified_name .

    $padrão  reduzir usando a regra 75 (type_name)


State 29

   64 type_declaration: ENUM IDENTIFIER . enumerator_list END_ENUM
   84 enumerator_list: . enumerator
   85                | . enumerator_list COMMA enumerator
   86 enumerator: . IDENTIFIER ASSIGN expression
   87           | . IDENTIFIER

    IDENTIFIER  deslocar, e ir ao estado 43

    enumerator_list  ir ao estado 44
    enumerator       ir ao estado 45


State 30

   62 type_declaration: STRUCT IDENTIFIER . variable_declarations END_STRUCT
   65 variable_declarations: . variable_declaration
   66                      | . variable_declarations variable_declaration
   67 variable_declaration: . modifiers type_specifier variable_declarators SEMICOLON
   68                     | . type_specifier variable_declarators SEMICOLON
   69 modifiers: . modifier
   70          | . modifiers modifier
   71 modifier: . CONST
   72         | . STATIC
   73 type_specifier: . type_name
   74 type_name: . primitive_type
   75          | . qualified_name
   76 primitive_type: . AUTO
   77               | . BOOL
   78               | . INT
   79               | . LONG
   80               | . FLOAT
   81               | . STRING
   88 qualified_name: . IDENTIFIER

    IDENTIFIER  deslocar, e ir ao estado 1
    AUTO        deslocar, e ir ao estado 2
    BOOL        deslocar, e ir ao estado 3
    CONST       deslocar, e ir ao estado 4
    FLOAT       deslocar, e ir ao estado 6
    INT         deslocar, e ir ao estado 7
    LONG        deslocar, e ir ao estado 8
    STRING      deslocar, e ir ao estado 9
    STATIC      deslocar, e ir ao estado 11

    variable_declarations  ir ao estado 46
    variable_declaration   ir ao estado 47
    modifiers              ir ao estado 23
    modifier               ir ao estado 24
    type_specifier         ir ao estado 25
    type_name              ir ao estado 26
    primitive_type         ir ao estado 27
    qualified_name         ir ao estado 28


State 31

   63 type_declaration: UNION IDENTIFIER . discriminant union_body END_UNION
   82 discriminant: . L_PAREN type_specifier declarator_name R_PAREN
   83             | . %empty  [IDENTIFIER, AUTO, BOOL, CONST, FLOAT, INT, LONG, STRING, STATIC]

    L_PAREN  deslocar, e ir ao estado 48

    $padrão  reduzir usando a regra 83 (discriminant)

    discriminant  ir ao estado 49


State 32

    9 function_declaration: FUNCTION type_specifier . subprogram_declarator subprogram_body END_FUNCTION
   11 subprogram_declarator: . IDENTIFIER L_PAREN parameter_list R_PAREN
   12                      | . IDENTIFIER L_PAREN R_PAREN

    IDENTIFIER  deslocar, e ir ao estado 33

    subprogram_declarator  ir ao estado 50


State 33

   11 subprogram_declarator: IDENTIFIER . L_PAREN parameter_list R_PAREN
   12                      | IDENTIFIER . L_PAREN R_PAREN

    L_PAREN  deslocar, e ir ao estado 51


State 34
